Add search functionality with text and vector matching
- Introduced new search API endpoint for service types, allowing free-text search with geolocation.
- Implemented text and vector search using LangChain and MongoDB Atlas.
- Added models for search responses and observations.
- Updated service type models to include optional descriptions.
- Integrated OpenAI embeddings for enhanced search capabilities.
- Created scripts for generating and storing embeddings, as well as creating necessary indexes in MongoDB.
- Updated seed data to reflect new service types and descriptions.
- Enhanced database connection handling for synchronous and asynchronous operations.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/?retryWrites=true&w=majority
 MONGO_DB=lgtm
+OPENAI_API_KEY=sk-...
